--- a/src/App.css
+++ b/src/App.css
@@ -383,9 +383,7 @@ body {
 #play {
   width: 20px;
 }
-#play:hover {
-  transform: scale(1.05);
-}
+
 
 .img-tittle {
   height: 13px;
@@ -475,4 +473,52 @@ body {
   margin: 34px 24px;
   font-size: 14px;
   color: var(--gray-text-color);
+}
+
+
+ /* Play next prev Btn bar container */
+
+ .playBar-container{
+  width: 99vw;
+  height: 7vh;
+  position: absolute;
+  background-color: black;
+  bottom: 0;
+  border-radius: 10px;
+  z-index: 10;
+  box-shadow: 0 0 10px black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ }
+
+.play-btn-img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+#playBtn{
+  transition: 0.3s ease;
+}
+
+#playBtn:hover{
+    transform: scale(1.3);
+}
+
+#prev{
+  transition: 0.3s ease;
+}
+#prev:hover{
+  transform: scale(1.3);
+}
+
+#next{
+  transition: 0.3s ease;
+  transform: scale(1.3);
+}
+#next:hover{
+  transform: scale(1.6);
+
 }
